# ftp-qt

./: .gitignore  README.md
src/ftpClient/: CMakeLists.txt  client.cpp  client.h  clientthread.cpp  clientthread.h  ftpClient.pro  ftpclient.cpp  ftpclient.h  ftpclient.ui  infothread.cpp
